# go-shan

./: .gitignore  pyproject.toml
.github/workflows/: django.yml  main.yml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: urls.py  views.py
hexlet_django_blog/article/templates/: articles.html
hexlet_django_blog/config/gunicorn/: dev.py
hexlet_django_blog/templates/: index.html
