[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["Georgy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"

[tool.poetry.group.dev.dependencies]
Django = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
