[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["Georgy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
django-extensions = "^3.2.3"
werkzeug = "^3.0.1"

[tool.poetry.group.dev.dependencies]
Django = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
